# PuppetFlow

./: .env.example  .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  vitest.config.ts
.githooks/: pre-push
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
apps/cli/: package.json
apps/editor/: index.html  package.json  vite.config.ts
apps/playground/: index.html  package.json  vite.config.ts
apps/playground/src-tauri/: Cargo.toml  tauri.conf.json
apps/playground/src-tauri/icons/: icon.icns
apps/playground/src-tauri/src/: lib.rs  main.rs
apps/studio/: index.html  (+2 more)
docs/: README.md  architecture.md  implementation-plan-input-timeline.md  implementation-plan-micro-behavior.md  implementation-plan-pfscript.md  implementation-plan-stateful.md  implementation-plan.md  overview.md  refactoring-plan.md  roadmap.md  追加仕様.md
presets/: Curious.pfpreset  Focused.pfpreset  Idle.pfpreset  Sleepy.pfpreset  Thinking.pfpreset
scripts/: build-official-presets.mjs  install-git-hooks.mjs  next-version.mjs  next-version.test.mjs  package-portable-cli.mjs  package-portable-cli.test.mjs  package-portable-studio.mjs  pre-push-hook.mjs  pre-push-hook.test.mjs  prepare-release-assets.mjs  release-assets.test.mjs  set-version.mjs  set-version.test.mjs  tauri-dev.mjs  tauri-dev.test.mjs
tooling/: vite-puppetflow-aliases.ts
(+183 files in other folders)
