[package]
name = "puppetflow-playground"
version = "0.1.0"
description = "PuppetFlow Playground"
authors = ["PuppetFlow contributors"]
license = "Apache-2.0"
edition = "2021"

[lib]
name = "puppetflow_playground_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rosc = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
